# yinban

./: .gitignore  IMPLEMENTATION.md  chat.bat  launcher.py  main.py  pyproject.toml  yinban.bat  yinban.ps1
data/: config.template.yaml  config.yaml
src/ai/: llm.py  memory.py  prompts.py
src/cli/: app.py  commands_chat.py  commands_config.py  commands_discover.py  commands_init.py  commands_login.py  commands_podcast.py  commands_recommend.py  commands_report.py  commands_setup.py  commands_web.py
src/core/: analyzer.py  chat.py  init.py  personality.py  recommender.py
src/netease/: auth.py  client.py  models.py  sync.py
src/podcast/: script.py  tts.py
src/storage/: config.py  database.py
