[project]
name = "ai-podcast"
version = "0.1.0"
description = "AI 音乐伙伴 - 懂你的音乐播客"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "edge-tts>=6.1.0",
    "openai>=1.0.0",
    "qrcode[pil]>=7.4.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
ai-podcast = "main:cli"

[tool.setuptools.packages.find]
include = ["src*"]
