[project]
name = "yinban"
version = "0.1.0"
description = "音伴 - 懂你的AI音乐伙伴"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "edge-tts>=6.1.0",
    "openai>=1.0.0",
    "qrcode[pil]>=7.4.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
yinban = "main:cli"

[project.optional-dependencies]
web = ["gradio>=5.0.0"]

[tool.setuptools.packages.find]
include = ["src*"]
